--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^4.1.3"
+    "art-template": "^4.13.1",
+    "bootstrap": "^4.1.3",
+    "moment": "^2.22.2"
   }
 }
